--- a/ri-report.html
+++ b/ri-report.html
@@ -2572,7 +2572,7 @@ ${compResults.map(p => `<tr><td><a href="${p.url}" target="_blank">${p.address}<
  modal.onclick = function() { modal.remove(); };
  
  modal.innerHTML = '<div style="background:#1e293b;padding:2rem;border-radius:16px;max-width:700px;width:90%;max-height:90vh;overflow-y:auto;position:relative" onclick="event.stopPropagation()">' +
- '<button onclick="document.getElementById(\'landEvalModal\').remove()" style="position:absolute;top:15px;right:15px;background:#ef4444;border:none;color:white;width:32px;height:32px;border-radius:50%;cursor:pointer;font-size:1rem;font-weight:bold;z-index:10;box-shadow:0 2px 8px rgba(0,0,0,0.3);line-height:32px;text-align:center">✕</button>' +
+ '<button onclick="document.getElementById(\'landEvalModal\').remove()" style="position:absolute;top:-12px;right:-12px;background:#ef4444;border:2px solid #1e293b;color:white;width:28px;height:28px;border-radius:50%;cursor:pointer;font-size:0.9rem;font-weight:bold;z-index:10;box-shadow:0 2px 8px rgba(0,0,0,0.4);line-height:24px;text-align:center">✕</button>' +
  '<div style="display:flex;flex-wrap:wrap;justify-content:space-between;align-items:center;margin-bottom:1.5rem;gap:0.5rem">' +
  '<h2 style="color:#6366f1;margin:0"> Deal Evaluation</h2>' +
  '<div style="display:flex;flex-wrap:wrap;gap:0.5rem;align-items:center">' +
@@ -2765,7 +2765,7 @@ ${compResults.map(p => `<tr><td><a href="${p.url}" target="_blank">${p.address}<
  modal.onclick = function() { modal.remove(); };
  
  modal.innerHTML = '<div style="background:#1e293b;padding:2rem;border-radius:16px;max-width:900px;width:95%;max-height:95vh;overflow-y:auto;position:relative" onclick="event.stopPropagation()">' +
- '<button onclick="document.getElementById(\'landNeighborhoodModal\').remove()" style="position:absolute;top:15px;right:15px;background:#ef4444;border:none;color:white;width:32px;height:32px;border-radius:50%;cursor:pointer;font-size:1rem;font-weight:bold;z-index:10;line-height:32px;text-align:center">✕</button>' +
+ '<button onclick="document.getElementById(\'landNeighborhoodModal\').remove()" style="position:absolute;top:-12px;right:-12px;background:#ef4444;border:2px solid #1e293b;color:white;width:28px;height:28px;border-radius:50%;cursor:pointer;font-size:0.9rem;font-weight:bold;z-index:10;box-shadow:0 2px 8px rgba(0,0,0,0.4);line-height:24px;text-align:center">✕</button>' +
  '<h2 style="color:#6366f1;margin:0 0 1rem 0">🗺️ Land Neighborhood Explorer</h2>' +
  '<div style="background:rgba(245,158,11,0.2);padding:1rem;border-radius:12px;margin-bottom:1.5rem">' +
  '<h3 style="color:#6366f1;margin:0 0 0.25rem 0">' + land.address + ', ' + land.city + '</h3>' +
@@ -3540,7 +3540,7 @@ ${compResults.map(p => `<tr><td><a href="${p.url}" target="_blank">${p.address}<
  modal.onclick = function() { modal.remove(); };
  
  modal.innerHTML = '<div style="background:#1e293b;padding:2rem;border-radius:16px;max-width:700px;width:90%;max-height:90vh;overflow-y:auto;position:relative" onclick="event.stopPropagation()">' +
- '<button onclick="document.getElementById(\'houseEvalModal\').remove()" style="position:absolute;top:15px;right:15px;background:#ef4444;border:none;color:white;width:32px;height:32px;border-radius:50%;cursor:pointer;font-size:1rem;font-weight:bold;z-index:10;box-shadow:0 2px 8px rgba(0,0,0,0.3);line-height:32px;text-align:center">✕</button>' +
+ '<button onclick="document.getElementById(\'houseEvalModal\').remove()" style="position:absolute;top:-12px;right:-12px;background:#ef4444;border:2px solid #1e293b;color:white;width:28px;height:28px;border-radius:50%;cursor:pointer;font-size:0.9rem;font-weight:bold;z-index:10;box-shadow:0 2px 8px rgba(0,0,0,0.4);line-height:24px;text-align:center">✕</button>' +
  '<div style="display:flex;flex-wrap:wrap;justify-content:space-between;align-items:center;margin-bottom:1.5rem;gap:0.5rem">' +
  '<h2 style="color:#6366f1;margin:0"> House Deal Evaluation</h2>' +
  '</div>' +
@@ -3636,7 +3636,7 @@ ${compResults.map(p => `<tr><td><a href="${p.url}" target="_blank">${p.address}<
    modal.onclick = () => modal.remove();
    
    modal.innerHTML = `<div style="background:#1e293b;padding:2rem;border-radius:16px;max-width:700px;width:95%;max-height:90vh;overflow-y:auto" onclick="event.stopPropagation()">
-     <button onclick="this.closest('#cityCompsModal').remove()" style="position:absolute;top:15px;right:15px;background:#ef4444;border:none;color:white;width:32px;height:32px;border-radius:50%;cursor:pointer;font-size:1rem">✕</button>
+     <button onclick="this.closest('#cityCompsModal').remove()" style="position:absolute;top:-12px;right:-12px;background:#ef4444;border:2px solid #1e293b;color:white;width:28px;height:28px;border-radius:50%;cursor:pointer;font-size:0.9rem;font-weight:bold;z-index:10;box-shadow:0 2px 8px rgba(0,0,0,0.4);line-height:24px;text-align:center">✕</button>
      <h2 style="color:#f59e0b;margin:0 0 0.5rem 0">📍 ${city} Market Data</h2>
      <p style="color:#94a3b8;font-size:0.85rem;margin-bottom:1.5rem">${titleNote}</p>
      
@@ -3797,7 +3797,7 @@ ${compResults.map(p => `<tr><td><a href="${p.url}" target="_blank">${p.address}<
  modal.onclick = function() { modal.remove(); };
  
  modal.innerHTML = '<div style="background:#1e293b;padding:2rem;border-radius:16px;max-width:900px;width:95%;max-height:95vh;overflow-y:auto;position:relative" onclick="event.stopPropagation()">' +
- '<button onclick="document.getElementById(\'neighborhoodModal\').remove()" style="position:absolute;top:15px;right:15px;background:#ef4444;border:none;color:white;width:32px;height:32px;border-radius:50%;cursor:pointer;font-size:1rem;font-weight:bold;z-index:10;line-height:32px;text-align:center">✕</button>' +
+ '<button onclick="document.getElementById(\'neighborhoodModal\').remove()" style="position:absolute;top:-12px;right:-12px;background:#ef4444;border:2px solid #1e293b;color:white;width:28px;height:28px;border-radius:50%;cursor:pointer;font-size:0.9rem;font-weight:bold;z-index:10;box-shadow:0 2px 8px rgba(0,0,0,0.4);line-height:24px;text-align:center">✕</button>' +
  '<h2 style="color:#6366f1;margin:0 0 1rem 0">🗺️ Neighborhood Explorer</h2>' +
  '<div style="background:rgba(99,102,241,0.2);padding:1rem;border-radius:12px;margin-bottom:1.5rem">' +
  '<h3 style="color:#e2e8f0;margin:0 0 0.25rem 0">' + house.address + ', ' + house.city + '</h3>' +
