Fix ReferenceError: totalCost - renamed to totalInvestment

--- a/ri-report.html
+++ b/ri-report.html
@@ -2319,7 +2319,7 @@ ${compResults.map(p => `<tr><td><a href="${p.url}" target="_blank">${p.address}<
  adjustedCostPsf: adjustedBuildCostPsf,
  estSalePrice: Math.round(estSalePrice),
  buildCost: Math.round(buildCost),
- totalCost: Math.round(totalCost),
+ totalCost: Math.round(totalInvestment),
  profit: Math.round(profit),
  profitPct: profitPct.toFixed(1),
  maxOffer: Math.round(Math.max(0, maxOffer)),
