Red color for negative equity values in House Hunter

--- a/ri-report.html
+++ b/ri-report.html
@@ -3517,7 +3517,7 @@ ${compResults.map(p => `<tr><td><a href="${p.url}" target="_blank">${p.address}<
  html += '<td style="padding:0.75rem;color:#6366f1">' + d.city + '</td>';
  html += '<td style="padding:0.75rem;text-align:right;color:#00E1E6;font-weight:600">' + formatPrice(d.price) + '</td>';
  html += '<td style="padding:0.75rem;text-align:right;color:#94a3b8">' + formatPrice(d.marketValue) + '</td>';
- html += '<td style="padding:0.75rem;text-align:right;color:#10b981;font-weight:bold">' + formatPrice(d.instantEquity) + '</td>';
+ html += '<td style="padding:0.75rem;text-align:right;color:' + (d.instantEquity >= 0 ? '#10b981' : '#f87171') + ';font-weight:bold">' + formatPrice(d.instantEquity) + '</td>';
  html += '<td style="padding:0.75rem;text-align:center;color:' + discountColor + ';font-weight:bold">' + d.discount + '%</td>';
  html += '<td style="padding:0.75rem;text-align:center">' + d.dom + '</td>';
  html += '<td style="padding:0.75rem;text-align:center">' + d.beds + '/' + d.baths + '</td>';
